@startuml Invoice Domain Overview
!define RECTANGLE class

title Invoice Domain Model - Overview

package "Invoice Aggregate" {
  class Invoice {
    -id: string
    -vatRate: VatRate | null
    -vatAmount: Money | null
    -total: Money
    -lineItems: LineItems
    -issueDate: CalendarDate
    -dueDate: CalendarDate
    -issuer: Issuer
    -recipient: Recipient
    
    +static create(options): Result<DomainError, Invoice>
    +toPlain(): object
  }
  
  class DraftInvoice {
    -id: string
    -vatRate: VatRate | null
    -vatAmount: Money | null
    -total: Money | null
    -lineItems: LineItems | null
    -issueDate: CalendarDate | null
    -dueDate: CalendarDate | null
    -issuer: Issuer | null
    -recipient: Recipient | null
    
    +toInvoice(): Result<DomainError, Invoice>
    +addLineItem(lineItem: LineItem): Result<DomainError, void>
    +removeLineItem(lineItem: LineItem): Result<DomainError, void>
    +applyVat(vatRate: VatRate): Result<DomainError, void>
    +addIssuer(issuer: Issuer): Result<DomainError, void>
    +addRecipient(recipient: Recipient): Result<DomainError, void>
    +addDueDate(dueDate: CalendarDate): Result<DomainError, void>
    +addIssueDate(issueDate: CalendarDate): Result<DomainError, void>
    +isValid(): boolean
    +static create(): Result<DomainError, DraftInvoice>
  }
}

package "Line Items" {
  class LineItems {
    -items: LineItem[]
    -subtotal: Money
    
    +add(lineItem: LineItem): Result<DomainError, LineItems>
    +remove(lineItem: LineItem): Result<DomainError, LineItems>
    +static create(items): Result<DomainError, LineItems>
  }
  
  class LineItem {
    -price: Money
    -description: UnitDescription
    -quantity: UnitQuantity
    -total: Money
    
    +static create(options): Result<DomainError, LineItem>
  }
}

package "Money & VAT" {
  class Money {
    -amount: Numeric
    -currency: Currency
    
    +add(other: Money): Result<DomainError, Money>
    +subtract(other: Money): Result<DomainError, Money>
    +multiplyBy(factor: Numeric): Money
    +static create(amount: string, currency: string): Result<DomainError, Money>
  }
  
  class VatRate {
    -value: Numeric
    
    +applyTo(money: Money): Money
    +static create(value: string): Result<DomainError, VatRate>
  }
  
  class Currency {
    +static create(code: string): Result<DomainError, Currency>
  }
  
  class Numeric {
    +static create(value: string): Numeric
  }
}

package "Parties" {
  class Issuer {
    -type: ISSUER_TYPE
    -name: string
    -address: string
    -taxId: string
    -email: Email
    
    +static create(options): Result<DomainError, Issuer>
  }
  
  class Recipient {
    -type: RECIPIENT_TYPE
    -name: string
    -address: string
    -taxId: string
    -email: Email
    -taxResidenceCountry: Country
    -billing: Paypal | Wire
    
    +static create(options): Result<DomainError, Recipient>
  }
  
  enum ISSUER_TYPE {
    INDIVIDUAL
    COMPANY
  }
  
  enum RECIPIENT_TYPE {
    INDIVIDUAL
    COMPANY
  }
}

package "Billing" {
  abstract class Billing {
    +toPlain(): object
  }
  
  class Paypal extends Billing {
    -email: Email
  }
  
  class Wire extends Billing {
    -swift: string
    -accountNumber: string
    -accountHolderName: string
    -bankName: string
    -bankAddress: string
    -bankCountry: Country
  }
}

package "Value Objects" {
  class CalendarDate {
    +toString(): string
  }
  
  class Email {
    +static create(email: string): Result<DomainError, Email>
  }
  
  class Country {
    +static create(options): Result<DomainError, Country>
  }
  
  class UnitDescription {
    +static create(description: string): UnitDescription
  }
  
  class UnitQuantity {
    -value: Numeric
    +static create(quantity: string): Result<DomainError, UnitQuantity>
  }
}

package "Events" {
  abstract class DomainEvent {
    +name: string
    +data: any
  }
  
  class InvoiceCreatedEvent extends DomainEvent
  class DraftInvoiceCreatedEvent extends DomainEvent
  class DraftInvoiceUpdatedEvent extends DomainEvent
  class DraftInvoiceFinishedEvent extends DomainEvent
}

' Key Relationships
DraftInvoice ..> Invoice : "converts to"
Invoice ||--|| LineItems : contains
DraftInvoice ||--o| LineItems : "may contain"

Invoice ||--|| Issuer : has
Invoice ||--|| Recipient : has
DraftInvoice ||--o| Issuer : "may have"
DraftInvoice ||--o| Recipient : "may have"

Invoice ||--|| Money : total
Invoice ||--o| VatRate : "may have"
DraftInvoice ||--o| Money : "total (calculated)"
DraftInvoice ||--o| VatRate : "may have"

LineItems ||--o{ LineItem : contains
LineItem ||--|| Money : price
LineItem ||--|| UnitDescription : has
LineItem ||--|| UnitQuantity : has

Money ||--|| Currency : has
Money ||--|| Numeric : amount
VatRate ||--|| Numeric : value
UnitQuantity ||--|| Numeric : value

Issuer ||--|| Email : has
Issuer ||--|| ISSUER_TYPE : type
Recipient ||--|| Email : has
Recipient ||--|| Country : "tax residence"
Recipient ||--|| RECIPIENT_TYPE : type
Recipient ||--|| Billing : "billing method"

Billing <|-- Paypal
Billing <|-- Wire
Paypal ||--|| Email : has
Wire ||--|| Country : "bank country"

Invoice ||--o{ InvoiceCreatedEvent : publishes
DraftInvoice ||--o{ DraftInvoiceCreatedEvent : publishes
DraftInvoice ||--o{ DraftInvoiceUpdatedEvent : publishes
DraftInvoice ||--o{ DraftInvoiceFinishedEvent : publishes

note top of DraftInvoice
  Builder pattern for Invoice.
  Mutable until converted to Invoice.
  All properties optional initially.
end note

note top of Invoice
  Immutable value object.
  Created only when all
  required data is present.
end note

note right of DraftInvoice::toInvoice
  Validates completeness
  and creates Invoice
end note

@enduml